# Orion

./: .gitignore  docker-compose.yml
backend/: main.py  pyproject.toml
backend/app/api/: auth.py  config.py  files.py  registries.py  upload.py  urls.py
backend/app/core/: config.py  database.py  deps.py  minio_client.py  security.py
backend/app/db/: config.py  init.py  reference.py  schema.py
backend/app/db/migrations/: 0001_initial.py
backend/app/models/: image_models.py  token.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: enrich_url.py  image_services.py  process_file.py
backend/app/workers/: config.py  enrich_url.py  process_file.py
backend/tests/: conftest.py  test_auth.py  test_no_stale_references.py  test_reference_model.py  test_upload.py
frontend/: .cta.json  .env.example  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: globalPasteHandler.tsx
frontend/src/components/gallery/: referenceMasonry.tsx  referenceMasonryCard.tsx
frontend/src/lib/: backend.ts  types.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx
frontend/src/routes/api/: upload.ts
frontend/src/server-fns/: registries.ts  urls.ts
