[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "colorthief>=0.2.1",
    "colour-science>=0.4.7",
    "fastapi[standard]>=0.138.2",
    "httpx>=0.27",
    "minio>=7.2.20",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mongomock-motor>=0.0.36",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
